--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", {"singleQuote": true}],
     "import/extensions": [
       "error",
       "ignorePackages",
